server module init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "crypto_tcp_chat_server"
-description = "tcp chat server with point-to-point encrypting "
+description = "simple tcp chat server with point-to-point encrypting "
 version = "0.1.0"
 authors = ["ahotchenkov <hotchenkov@list.ru>"]
+
 
 [dependencies]
 rust-crypto = "0.2.36"
